# libfx

./: .clangd  .editorconfig  .gitignore  .gitmodules  LICENSE  libfx.cppcheck  meson.build  meson_amd64.ini  meson_i686.ini
lib/: meson.build
lib/libfx/: fxBootstrap.cpp  fxBootstrap.hpp  fxConfig.hpp
lib/libfx/fxCore/: fxAnsi.hpp  fxCore.cpp  fxCore.hpp  fxException.hpp  fxLogging.cpp  fxLogging.hpp  fxMacros.hpp  fxSingleton.hpp
lib/libfx/fxCrypto/: fxCryptoUtils.hpp  fxHash.hpp  fxRandom.hpp
lib/libfx/fxCrypto/fxCipher/: fxCipher3DES.cpp  fxCipher3DES.hpp  fxCipherAES.cpp  fxCipherAES.hpp  fxCipherBlowfish.cpp  fxCipherBlowfish.hpp  fxCipherChaCha20.cpp  fxCipherChaCha20.hpp  fxCipherDES.cpp  fxCipherDES.hpp  fxCipherRC4.cpp  fxCipherRC4.hpp  fxCipherRC5.cpp  fxCipherRC5.hpp  fxCipherSerpent.cpp  fxCipherSerpent.hpp  fxCipherTEA.cpp  fxCipherTEA.hpp  fxCipherTwofish.cpp  fxCipherTwofish.hpp  fxCipherXSalsa20.cpp  fxCipherXSalsa20.hpp  fxCipherXTEA.cpp  fxCipherXTEA.hpp
lib/libfx/fxCrypto/fxHash/: fxHashCRC16.hpp  fxHashCRC32.hpp  fxHashDJB2.hpp  fxHashFNV1a.hpp  fxHashJenkins.hpp  fxHashMD2.hpp  fxHashMD5.hpp  fxHashSHA1.hpp  fxHashSHA256.hpp  fxHashSHA512.hpp  fxHashTiger.hpp
lib/libfx/fxMisc/: fxCompression.cpp  fxCompression.hpp
tests/: meson.build
tests/meow/: main.cpp  meson.build
tools/: meson_glob.py  meson_poke.py  update_git.py
